# aya

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md  README.txt  build.yml  masterserver.py  shell.nix  vcpkg.json
client/bootstrapper/: CMakeLists.txt
client/bootstrapper/resources/: qt.qrc  script.rc  winrc.h
client/bootstrapper/src/: Bootstrapper.cpp  Bootstrapper.hpp  main.cpp
client/player/: CMakeLists.txt
client/player/resources/: winrc.h
client/player/src/: Application.cpp  Application.hpp  AvatarViewService.cpp  AvatarViewService.hpp  Document.cpp  Document.hpp  FunctionMarshaller.cpp  FunctionMarshaller.hpp  GameVerbs.cpp  GameVerbs.hpp  InitializationError.hpp  LauncherView.cpp  LauncherView.hpp  RenderJob.cpp  RenderJob.hpp  View.cpp  View.hpp  Window.cpp  Window.hpp  main.cpp
client/server/: CMakeLists.txt
client/server/resources/: winrc.h
client/server/src/: AppView.cpp  AppView.hpp  MainWindow.cpp  MainWindow.hpp  grid.cpp  grid.hpp  main.cpp  oldmain.cpp  oldserver.cpp  server.cpp  server.hpp
client/studio/: CMakeLists.txt
client/studio/resources/: qt.qrc  ribbon.css  ribbon.xml  studio.css  studio_dark.css  theme.ini  theme_dark.ini  winrc.h
client/studio/resources/BuiltInPlugins/: PhysicsAnalyzer.rbxmx  TerrainTools.rbxmx  TransformDragger.rbxmx
client/studio/src/: AddEmulationDeviceDialog.cpp  AddEmulationDeviceDialog.hpp  AuthenticationHelper.cpp  AuthenticationHelper.hpp  AuthoringSettings.cpp  AuthoringSettings.hpp  AutoSaveDialog.cpp  AutoSaveDialog.hpp  CSGOperations.cpp  CSGOperations.hpp  CommonInsertWidget.cpp  CommonInsertWidget.hpp  DebuggerClient.cpp  DebuggerClient.hpp  DebuggerWidgets.cpp  DebuggerWidgets.hpp  DocDockManager.cpp  DocDockManager.hpp  DocDockWidget.cpp  DocDockWidget.hpp  DocTabManager.cpp  DocTabManager.hpp  ExternalHandlers.cpp  ExternalHandlers.hpp  FindDialog.cpp  FindDialog.hpp  FunctionMarshaller.cpp  FunctionMarshaller.hpp  GalleryItemColor.cpp  GalleryItemColor.hpp  IExternalHandler.hpp  IRobloxDoc.hpp  InsertObjectListWidget.cpp  InsertObjectListWidget.hpp  InsertObjectListWidgetItem.cpp  InsertObjectListWidgetItem.hpp  InsertServiceDialog.cpp  InsertServiceDialog.hpp  KeepSavedChangesDialog.cpp  KeepSavedChangesDialog.hpp  (+139 more)
engine/3d/: CMakeLists.txt
engine/3d/src/: AABSPTree.hpp  AABox.cpp  AABox.hpp  Array.hpp  BinaryFormat.hpp  BinaryInput.cpp  BinaryInput.hpp  BinaryOutput.cpp  BinaryOutput.hpp  BoundsTrait.hpp  Box.cpp  Box.hpp  BumpMapPreprocess.hpp  Capsule.cpp  Capsule.hpp  CollisionDetection.cpp  CollisionDetection.hpp  Color1.hpp  Color1uint8.hpp  Color3.cpp  Color3.hpp  Color3uint8.cpp  Color3uint8.hpp  Color4.cpp  Color4.hpp  Color4uint8.cpp  Color4uint8.hpp  CompactCFrame.hpp  Cone.hpp  ConvexPolyhedron.hpp  CoordinateFrame.cpp  CoordinateFrame.hpp  Crypto.cpp  Crypto.hpp  Cylinder.cpp  Cylinder.hpp  Draw.cpp  Draw.hpp  DrawAdorn.cpp  DrawAdorn.hpp  (+103 more)
engine/app/: CMakeLists.txt
engine/app/src/DataModel/: Accoutrement.cpp  Accoutrement.hpp  ActionStation.hpp  AdService.cpp  AdService.hpp  Adornment.cpp  Adornment.hpp  AnimatableRootJoint.cpp  AnimatableRootJoint.hpp  Animation.cpp  Animation.hpp  AnimationController.cpp  AnimationController.hpp  AnimationTrack.cpp  AnimationTrack.hpp  AnimationTrackState.cpp  AnimationTrackState.hpp  Animator.cpp  Animator.hpp  ArcHandles.cpp  ArcHandles.hpp  AssetService.cpp  AssetService.hpp  Attachment.cpp  Attachment.hpp  Backpack.cpp  Backpack.hpp  BadgeService.cpp  BadgeService.hpp  BaseRenderJob.cpp  BaseRenderJob.hpp  BasicPartInstance.cpp  BasicPartInstance.hpp  BevelMesh.cpp  BevelMesh.hpp  BillboardGui.cpp  BillboardGui.hpp  Bindable.cpp  Bindable.hpp  BlockMesh.cpp  (+412 more)
engine/app/src/GUI/: ChatOutput.cpp  ChatOutput.hpp  ChatWidget.cpp  ChatWidget.hpp  EquationDisplay.cpp  EquationDisplay.hpp  GUI.cpp  GUI.hpp  GuiDraw.cpp  GuiDraw.hpp  GuiEvent.hpp  Layout.hpp  ScoreHud.cpp  ScoreHud.hpp  Widget.cpp  Widget.hpp
engine/app/src/Humanoid/: Balancing.cpp  Balancing.hpp  FallingDown.cpp  FallingDown.hpp  Flying.cpp  Flying.hpp  Freefall.cpp  Freefall.hpp  GettingUp.cpp  GettingUp.hpp  (+24 more)
engine/core/: CMakeLists.txt
engine/core/src/: ArrayDynamic.hpp  AyaAssert.cpp  AyaAssert.hpp  AyaBase.hpp  AyaCrash.cpp  AyaDbgInfo.cpp  AyaDbgInfo.hpp  AyaFormat.cpp  AyaFormat.hpp  AyaPlatform.hpp  AyaStrings.hpp  BaldPtr.hpp  CEvent.cpp  CEvent.hpp  CPUCount.cpp  CPUCount.hpp  Coordinator.cpp  Coordinator.hpp  Countable.hpp  Crypt.cpp  Crypt.hpp  Debug.cpp  Debug.hpp  Declarations.hpp  DenseHash.hpp  FastLog.cpp  FastLog.hpp  FastLogStream.cpp  FastLogStream.hpp  GlobalVectorItem.hpp  HardwareInfo.cpp  HardwareInfo.hpp  ImGui.cpp  ImGui.hpp  Log.cpp  Log.hpp  MathUtil.cpp  MathUtil.hpp  Memory.cpp  Memory.hpp  (+48 more)
engine/gfx/: CMakeLists.txt
engine/network/: CMakeLists.txt
engine/network/src/: API.cpp  API.hpp  BoostAppend.cpp  BoostAppend.hpp  ChatFilter.cpp  ChatFilter.hpp  Client.cpp  Client.hpp  ClientReplicator.cpp  ClientReplicator.hpp  ClusterUpdateBuffer.cpp  ClusterUpdateBuffer.hpp  Compressor.cpp  Compressor.hpp  ConcurrentRakPeer.cpp  ConcurrentRakPeer.hpp  CrashReporter.cpp  CrashReporter.hpp  CrispProxy.hpp  DataBlockEncryptor.cpp  DataBlockEncryptor.hpp  Dictionary.cpp  Dictionary.hpp  DirectPhysicsReceiver.cpp  DirectPhysicsReceiver.hpp  ErrorCompPhysicsSender.cpp  ErrorCompPhysicsSender.hpp  ErrorCompPhysicsSender2.cpp  ErrorCompPhysicsSender2.hpp  GameConfigurer.cpp  GameConfigurer.hpp  GamePerfMonitor.cpp  GamePerfMonitor.hpp  GuidRegistryService.cpp  GuidRegistryService.hpp  InterpolatingPhysicsReceiver.cpp  InterpolatingPhysicsReceiver.hpp  Item.cpp  Item.hpp  Marker.cpp  (+86 more)
tools/cef-subprocess/: CMakeLists.txt
tools/cef-subprocess/resources/: winrc.h
tools/cef-subprocess/src/: main.cpp
tools/core-script-compiler/: CMakeLists.txt
tools/core-script-compiler/resources/: winrc.h
tools/core-script-compiler/src/: main.cpp
tools/thumbnail-helper/: CMakeLists.txt  README.txt
tools/thumbnail-helper/resources/: script.rc  winrc.h
tools/thumbnail-helper/src/: thumb_win32.cc  thumb_win32_dll.cc
(+1208 files in other folders)
